@@ -1,5 +1,13 @@
 2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>
 
+	* gsearchtool.c:  Fix for bug report 122419.
+	(http://bugzilla.gnome.org/show_bug.cgi?id=122419)
+	
+	* gsearchtool-callbacks.[ch]:  Rename the callback function 
+	constraint_menu_toggled_cb to constraint_menu_item_activate_cb.
+
+2003-09-18  Dennis Cranston <dennis_cranston at yahoo com>
+
 	* gsearchtool-callbacks.c:  Apply fix based on patch from
 	Hidetoshi Tajima (hidetoshi.tajima@sun.com) for bug report
 	122402. (http://bugzilla.gnome.org/show_bug.cgi?id=122402)
